--- a/Timetable/Properties/Resources.resx
+++ b/Timetable/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="Montserrat_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\Fonts\Montserrat-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Montserrat_Italic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Assets\Fonts\Montserrat-Italic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Assets\1.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
